--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Kenjamin Button's Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Tic Tac Toe</h1>
+        <h1>Kenjamin Button's Tic Tac Toe</h1>
         <!-- Game board container -->
         <div id="board" class="board">
             <div class="cell" data-index="0"></div>
