--- a/index.html
+++ b/index.html
@@ -9,22 +9,32 @@
 <body>
     <div class="container">
         <h1>Kenjamin Button's Tic Tac Toe</h1>
-        <!-- Game board container -->
-        <div id="board" class="board">
-            <div class="cell" data-index="0"></div>
-            <div class="cell" data-index="1"></div>
-            <div class="cell" data-index="2"></div>
-            <div class="cell" data-index="3"></div>
-            <div class="cell" data-index="4"></div>
-            <div class="cell" data-index="5"></div>
-            <div class="cell" data-index="6"></div>
-            <div class="cell" data-index="7"></div>
-            <div class="cell" data-index="8"></div>
+        
+        <!-- Player Selection Screen -->
+        <div id="playerSelection" class="player-selection">
+            <h2>Choose Your Symbol</h2>
+            <div class="symbol-buttons">
+                <button id="chooseX">X</button>
+                <button id="chooseO">O</button>
+            </div>
         </div>
-        <!-- Status message to show current player and winner -->
-        <div id="status" class="status"></div>
-        <!-- Reset button -->
-        <button id="resetBtn">Reset Game</button>
+
+        <!-- Game board container (initially hidden) -->
+        <div id="gameContainer" style="display: none;">
+            <div id="board" class="board">
+                <div class="cell" data-index="0"></div>
+                <div class="cell" data-index="1"></div>
+                <div class="cell" data-index="2"></div>
+                <div class="cell" data-index="3"></div>
+                <div class="cell" data-index="4"></div>
+                <div class="cell" data-index="5"></div>
+                <div class="cell" data-index="6"></div>
+                <div class="cell" data-index="7"></div>
+                <div class="cell" data-index="8"></div>
+            </div>
+            <div id="status" class="status"></div>
+            <button id="resetBtn">Reset Game</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
