--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
         
         <!-- Player Selection Screen -->
         <div id="playerSelection" class="player-selection">
-            <h2>Choose Your Symbol</h2>
-            <div class="symbol-buttons">
-                <button id="chooseX">X</button>
-                <button id="chooseO">O</button>
+            <h2>Player Setup</h2>
+            <div class="player-form">
+                <div class="name-input">
+                    <label for="playerName">Enter Your Name:</label>
+                    <input type="text" id="playerName" placeholder="Your name" required>
+                </div>
+                <h3>Choose Your Symbol</h3>
+                <div class="symbol-buttons">
+                    <button id="chooseX">X</button>
+                    <button id="chooseO">O</button>
+                </div>
             </div>
         </div>
 
         <!-- Game board container (initially hidden) -->
         <div id="gameContainer" style="display: none;">
+            <div id="status" class="status"></div>
             <div id="board" class="board">
                 <div class="cell" data-index="0"></div>
                 <div class="cell" data-index="1"></div>
@@ -32,7 +40,6 @@
                 <div class="cell" data-index="7"></div>
                 <div class="cell" data-index="8"></div>
             </div>
-            <div id="status" class="status"></div>
             <button id="resetBtn">Reset Game</button>
         </div>
     </div>
