fix: Use player's actual name in score board
- Remove hardcoded 'Player' text from score board
- Update player name display ID to match new HTML structure
- Ensure player's entered name shows in score tracking

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Score Board -->
             <div id="scoreBoard" class="score-board">
                 <div class="score-item">
-                    <span id="playerName">Player</span>: <span id="playerScore">0</span>
+                    <span id="playerNameDisplay"></span>: <span id="playerScore">0</span>
                 </div>
                 <div class="score-item">
                     <span>Computer</span>: <span id="computerScore">0</span>
