feat: Add draw game tracking
- Add draw counter to score board
- Track number of draw games
- Update score display for draws
- Simplify draw detection logic

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <div class="score-item">
                     <span>Computer</span>: <span id="computerScore">0</span>
                 </div>
+                <div class="score-item">
+                    <span>Draws</span>: <span id="drawScore">0</span>
+                </div>
             </div>
             <div id="status" class="status"></div>
             <div id="board" class="board">
