Added images folder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span>Computer</span>: <span id="computerScore">0</span>
                 </div>
                 <div class="score-item">
-                    <span>Draws</span>: <span id="drawScore">0</span>
+                    <span>Draw(s)</span>: <span id="drawScore">0</span>
                 </div>
             </div>
             <div id="status" class="status"></div>
